test/expected_output/autoscaler.yaml
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    provi.repository: https://github.com/example/repo
    provi.slack: my-cool-team
  labels:
    app: web
    app.kubernetes.io/name: dummy
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
spec:
  selector:
    matchLabels:
      selector: my-cool-app-deployment-web
  template:
    metadata:
      annotations:
        provi.repository: https://github.com/example/repo
        provi.slack: my-cool-team
      labels:
        selector: my-cool-app-deployment-web
        app: web
        app.kubernetes.io/name: dummy
        chart: my-cool-app
        chartVersion: 1.0.0
        team: cool-team
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "dummy"
      - maxSkew: 2
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "dummy"
      automountServiceAccountToken: false
      tolerations:
        - key: "spot"
          operator: "Exists"
          effect: "NoSchedule"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: docker.io/image:abcd1234
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: false
          env:
            - name: RACK_ENV
              value: "production"
            - name: RAILS_ENV
              value: "production"
          envFrom:
            - secretRef:
                name: dummy
          livenessProbe:
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 5
            successThreshold: 1
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: 256Mi
              ephemeral-storage: 200Mi
            requests:
              cpu: "250m"
              memory: 256Mi
              ephemeral-storage: 200Mi
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - karpenter
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: web
spec:
  minReplicas: 3
  maxReplicas: 6
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: web
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 80
