test/expected_output/containers-basic.yaml
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    provi.repository: https://github.com/example/repo
  labels:
    app: web
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
spec:
  replicas: 1
  selector:
    matchLabels:
      selector: my-cool-app-deployment-web
  template:
    metadata:
      annotations:
        provi.repository: https://github.com/example/repo
      labels:
        selector: my-cool-app-deployment-web
        app: web
        chart: my-cool-app
        chartVersion: 1.0.0
        team: cool-team
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "test-deployments"
      - maxSkew: 2
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "test-deployments"
      automountServiceAccountToken: false
      restartPolicy: Always
      initContainers:
        - name: test-initcontainer
          image: busybox:1.33.2
          imagePullPolicy: Always
          command:
            - sh
            - -c
            - echo Hello, initial world!
          securityContext:
            runAsNonRoot: false
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
            requests:
              cpu: "250m"
              memory: 256Mi
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: docker.io/image:abcd1234
          imagePullPolicy: Always
          command:
            - sh
          args:
            - -c
            - echo Hello, World
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
          env:
            - name: TEST_CONFIGMAP_VALUE
              valueFrom:
                configMapValue:
                  key: banana
                  name: fruit
            - name: TEST_SECRET
              valueFrom:
                secretKeyRef:
                  key: password
                  name: myCoolTestSecret
          envFrom:
            - secretRef:
                name: test-deployments
          lifecycle:
            preStop:
              exec:
                command:
                - sleep
                - "30"
          livenessProbe:
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 5
            successThreshold: 1
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: 256Mi
              ephemeral-storage: 200Mi
            requests:
              cpu: "250m"
              memory: 256Mi
              ephemeral-storage: 200Mi
          volumeMounts:
            - mountPath: /data
              name: data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - karpenter
