test/expected_output/ingresses-alb.yaml
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:123456789:certificate/abcd1234-1a2b-3c4d-5e6f-987654abcd123
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Name=dummy-alb
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: test-ingresses.example.com
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    provi.repository: https://github.com/example/repo
    provi.slack: my-cool-team
    external-dns.alpha.kubernetes.io/ttl: "10"
  labels:
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
spec:
  ingressClassName: alb
  rules:
    - host: "test-ingresses.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
