test/expected_output/ingresses-nginx-external.yaml
---
# Source: defaults/templates/microservice.yaml.tpl
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test-ingresses.example.com
    nginx.ingress.kubernetes.io/auth-realm: Enter your credentials
    nginx.ingress.kubernetes.io/auth-secret: dummy-ingress-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    provi.repository: https://github.com/example/repo
    external-dns.alpha.kubernetes.io/ttl: "10"
  labels:
    chart: defaults
    chartVersion: 1.0.0
    team: cool-team
spec:
  ingressClassName: nginx
  rules:
    - host: "test-ingresses.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
