test/expected_output/statefulsets.yaml
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test-statefulsets
  annotations:
    provi.repository: https://github.com/example/repo
    eks.amazonaws.com/role-arn: "arn:aws:iam::123456789:role/test-statefulsets"
    eks.amazonaws.com/sts-regional-endpoints: "true"
  labels:
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: v1
kind: Service
metadata:
  name: worker
  annotations:
    provi.repository: https://github.com/example/repo
  labels:
    app: worker
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
spec:
  selector:
    selector: my-cool-app-statefulset-worker
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
---
# Source: my-cool-app/templates/microservice.yaml.tpl
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: worker
  annotations:
    provi.repository: https://github.com/example/repo
  labels:
    app: worker
    chart: my-cool-app
    chartVersion: 1.0.0
    team: cool-team
spec:
  serviceName: worker
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      selector: my-cool-app-statefulset-worker
  template:
    metadata:
      annotations:
        provi.repository: https://github.com/example/repo
      labels:
        selector: my-cool-app-statefulset-worker
        app: worker
        chart: my-cool-app
        chartVersion: 1.0.0
        team: cool-team
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "test-statefulsets"
      - maxSkew: 2
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: "test-statefulsets"
      serviceAccountName: test-statefulsets
      automountServiceAccountToken: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: docker.io/image:abcd1234
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: false
          env:
            - name: HELLO
              value: "world"
          envFrom:
            - secretRef:
                name: test-statefulsets
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
            requests:
              cpu: "250m"
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - karpenter
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
